name:                toml-hs
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/kuzux/toml-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Arda Cinar
maintainer:          kuzux92@gmail.com
copyright:           2017 Arda Cinar
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Toml
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , scientific
                     , time
